# Phoenix-Nirvana

./: .gitignore  CMakeLists.txt  readme.md  test.toml
include/ext/: argparser.hpp  cppm.hpp  indicators.hpp  pcg32.h  tinyexr.h  toml.hpp
include/phoenix/core/: bitmap_class.h  bsdf_class.h  camera_class.h  common.h  common_struct.h  denoiser_class.h  discrete_pdf_class.h  emitter_class.h  image_block_class.h  integrator.h  microfacet_class.h  model_class.h  object_class.h  parser_class.h  render_class.h  sampler_class.h  scene_class.h  shape_class.h  texture_class.h  tracer_class.h  utils.h  vector_class.h
include/phoenix/utils/: file_tool_class.h  image_tool_class.h  imgae_tool_class.h  model_loader_class.h  tool_function.h
scene/bathroom/: scene_v0.6.json  scene_v3.xml
scene/cbox/: cbox.json  cbox.toml
scene/cornell-box/: scene_v0.6.json
scene/glass-of-water/: scene_v0.6.json  scene_v3.xml
scene/kitchen/: scene_v0.6.json  scene_v3.xml  test.json  test.xml
scene/mis/: scene_v0.6.json  scene_v0.6.xml  veach.json
scene/simple_test/: test.toml
scene/spaceship/: change.xml  sample.json  scene_v0.6.json  scene_v0.6.xml  scene_v3.xml  see.xml
scene/staircase2/: scene_v0.6.json
scene/veach-mis/: scene_v0.6.json
scene/water-caustic/: scene_v0.6.json
src/phoenix/: main.cpp
src/phoenix/bsdfs/: conduct.cpp  dielectric.cpp  diffuse.cpp  rough_conduct.cpp  smooth_plastic.cpp
src/phoenix/cameras/: pinhole_camera_class.cpp
src/phoenix/core/: bitmap_class.cpp  camera_class.cpp  common_struct.cpp  denoiser_class.cpp  (+12 more)
tools/: mitusba2json.py
(+16 files in other folders)
